[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
nanoid = "0.4.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "macros"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
